--- a/index.html
+++ b/index.html
@@ -2,14 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Profile</title>
+    <title>My Portfolio</title>
+    <link rel="icon" href="assets/Icons/WebLogo.png">
+
+    <meta name="keywords" content="Samadhi Nilakshana">
+    <meta name="description" content="This is my website">
+    <meta name="viewport" content="width=device-width initial-scale=1">
+    <meta name="theme-color" content="pink">
+
 </head>
 <body>
+<header>
 
-<h1>Samadhi Nilakshana</h1>
-<h2>GDSE58</h2>
-<h3>Hi! It's Nice to meet you</h3>
-<img src="assets/images/Background.gif">
+    <nav>
+
+        <ul>
+
+            <li><a href="#01">Home</a></li>
+            <li><a href="#02">About</a></li>
+            <li><a href="#03">Services</a></li>
+            <li> Samadhi Nilakshana</li>
+            <li><a href="#04">Skills</a></li>
+            <li><a href="#05">Education</a></li>
+            <li><a href="#06">Project</a></li>
+            <li><a href="#07">Contact</a></li>
+
+        </ul>
+
+
+    </nav>
+
+</header>
+
 
 </body>
 </html>
