Added 2 sections to index

--- a/index.html
+++ b/index.html
@@ -33,6 +33,71 @@
     </nav>
 
 </header>
+<main>
+
+<section>
+    <section>
+    <div>
+             <pre>
+                <dfn id="01"><h2>Hi</h2></dfn>
+                 I'm <strong>Software Developer</strong>
+             </pre>
+    </div>
+
+
+
+        <img src="assets/images/Main.jpeg" alt="Main.jpeg" width="300">
+
+    </section>
+
+    <section>
+        <section>
+            <img src="assets/images/Photo.jpeg" alt="Myself.jpeg" width="200">
+        </section>
+        <section>
+
+            <h1> <dfn id="02">ABOUT ME</dfn></h1>
+           <pre>
+               I’m <b>Samadhi Nilakshana</b>
+               FRom Galle ,Srilanaka</i></pre>
+
+            <pre>
+                <h1>I am developer and a web designer</h1></pre>
+            <pre>
+            “I am someone who is mature, candid and who has integrity.  Everyday I
+                                    work to
+            improve myself and my skills which is part of maturing and becoming better at
+                                    what I do.”</pre>
+        </section>
+    </section>
+
+    <section>
+
+        <h1><dfn id="03">Services</dfn></h1>
+
+        <h3>App Development</h3>
+        <img src="assets/images/AppDevelopment.png" alt="AppDevelopment Image" width="200">
+
+        <h3>Web Development</h3>
+        <img src="assets/images/WebDevelopment.png" alt="WebDevelopment Image" width="200">
+
+        <h3>Web Design</h3>
+        <img src="assets/images/web-design.png" alt="Web Design Image" width="200">
+
+        <h3>Graphic Design</h3>
+        <img src="assets/images/GraphicDesign.png" alt="Graphic Design Image" width="200">
+
+    </section>
+
+
+
+
+</section>
+
+</main>
+
+
+
 
 
 </body>
