Added update index.html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,86 @@
 
     </section>
 
+    <section>
+        <h1><dfn id="04">Skills</dfn></h1>
+
+        <img src="assets/Icons/Java.png" alt=Image of Java width="120">
+        <p><pre>
+        Java</pre></p>
+
+
+        <img src="assets/Icons/HTML.png" alt=Image of html width="120">
+        <p><pre>
+        HTML</pre></p>
+
+
+        <img src="assets/Icons/Javascript.png" alt=Image of javascript width="120">
+        <p><pre>
+        JavaScript</pre></p>
+
+        <img src="assets/Icons/Mysql.png" alt=Image of Mysql width="120">
+        <p><pre>
+        Mysql</pre></p>
+
+        <img src="assets/Icons/CSS.png" alt=Image of CSS width="120">
+        <p><pre>
+        CSS</pre></p>
+
+        <img src="assets/Icons/Hybernate.png" alt=Image of Hybernate width="120">
+        <p><pre>
+        Hybernate</pre></p>
+    </section>
+
+    <section>
+
+        <h1><dfn id="05">Education </dfn></h1>
+
+        <div>
+            <pre>
+
+                    Primary School
+                 Rippon Girls’ College
+            </pre>
+
+            <pre>
+                    Little Leader
+            </pre>
+
+            <pre>
+                    Junior Prefect
+            </pre>
+
+            <pre>
+                 Super Junior Prefect
+            </pre>
+
+            <pre>
+                    Senior Prefect
+            </pre>
+
+            <pre>
+                    Secratary Science Socity
+            </pre>
+
+            <pre>
+                    IJSE  Undergraduater
+
+            </pre>
+
+
+            <blockquote>
+                "Education breeds confidence. Confidence breeds hope. Hope breeds peace."
+                <cite>-Confucius-</cite>
+            </blockquote>
+        </div>
+
+    </section>
+
+
+
+
+
+
 
 
 
