Added icon to index.html

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <section>
 
         <h1><dfn id="05">Education </dfn></h1>
+        <img src="assets/Icons/Graduate.png" alt="Image of Graduation Cap" width="50">
 
         <div>
             <pre>
@@ -163,7 +164,7 @@
         </div>
 
     </section>
-
+  
 
 
 
