--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                FRom Galle ,Srilanaka</i></pre>
 
             <pre>
-                <h1>I am developer and a web designer</h1></pre>
+                    <h1>I am developer and a web designer</h1></pre>
             <pre>
             “I am someone who is mature, candid and who has integrity.  Everyday I
                                     work to
@@ -144,15 +144,15 @@
             </pre>
 
             <pre>
-                    Senior Prefect
+                Senior Prefect
             </pre>
 
             <pre>
-                    Secratary Science Socity
+                Secratary Science Socity
             </pre>
 
             <pre>
-                    IJSE  Undergraduater
+                IJSE  Undergraduater
 
             </pre>
 
@@ -164,22 +164,94 @@
         </div>
 
     </section>
-  
 
+  <section>
+      <h1><dfn id="06">Project </dfn></h1>
+      <img src="assets/images/parking%20system.jpg" alt=Animation image of Parkig System width="400">
+      <p><pre>
+        Parking System </pre></p>
 
+      <img src="assets/images/vet-clinic.jpg" alt=Animation image of Vet Clinc width="400">
+      <p><pre>
+       Vet Clinic </pre></p>
 
+      <img src="assets/images/supermarket.jpg" alt=Animation image of SuperMarket width="400">
+      <p><pre>
+      SuperMarket </pre></p>
 
+  </section>
 
+  <p>
+      <h1><dfn id="07">Contact Me </dfn></h1>
+      <div>
 
+      <pre>Hey! I am looking forward to start a project with you
+      Have questions about my services? Let's talk about how we can help you
+      achieve your goals and take your business to the top! </div>
 
+      <pre>I would be happy to answer your questions and set up a meeting with you.
+          I can help set you apart from the flock!</pre>
+    <hr>
+    
+    <img src="assets/Icons/smartphone.png/" alt="Icon of a SmartPhone" width="50">
+    <pre>
+            Phone
+        0705371558
+    </pre>
+
+    <img src="assets/Icons/your-location.png" alt="Icon of a Location" width="50">
+    <pre>
+        Samadhi Nilakshana
+        No38,
+        Housing Scheme,Wekunugoda,Galle.
+    </pre>
+
+    <img src="assets/Icons/email.png" alt="Icon of a e-mail" width="50">
+    <pre>
+        samadhinilakshana1999@gmail.com
+    </pre>
+
+    <div>I am also on Social Network</div>
+
+    <a herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
+    <a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a>
+    <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png"
+                                                                             alt="Icon of LinkedIn" width="20"></a>
+    <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub" width="20"> </a>
+    <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a>
+
+    <hr>
+
+    <p> Contact Me</p>
+
+    <form>
+        <fieldset>
+            <label for="txtName">Your Name</label>
+            <input id="txtName" type="text" placeholder="Your Name">
+            <br><br>
+
+            <label for="txtEmail">Your Email</label>
+            <input id="txtEmail" type="text" placeholder="Your Email">
+            <br><br>
+
+            <label for="txtMessage">Your message</label>
+            <textArea id="txtMessage"></textArea>
+            <button>Send</button>
+
+        </fieldset>
+    </form>
 
 </section>
 
 </main>
+<footer>
+
+    <div>
+
+        <p><b><small>Copyright © 2021 Samadhi Nilakshana All rights reserved.</small></b></p>
+    </div>
 
 
-
-
-
+</footer>
 </body>
 </html>
