Added modified index.html

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
                                     work to
             improve myself and my skills which is part of maturing and becoming better at
                                     what I do.”</pre>
+            
+
+            <a herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
+            <a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a>
+            <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png"
+                                                                                     alt="Icon of LinkedIn" width="20"></a>
+            <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub" width="20"> </a>
+            <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a>
         </section>
     </section>
 
@@ -165,7 +173,7 @@
 
     </section>
 
-  <section>
+    <section>
       <h1><dfn id="06">Project </dfn></h1>
       <img src="assets/images/parking%20system.jpg" alt=Animation image of Parkig System width="400">
       <p><pre>
@@ -180,6 +188,8 @@
       SuperMarket </pre></p>
 
   </section>
+
+   <section>
 
   <p>
       <h1><dfn id="07">Contact Me </dfn></h1>
@@ -240,6 +250,7 @@
 
         </fieldset>
     </form>
+   </section>
 
 </section>
 
