--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="icon" href="assets/Icons/WebLogo.png">
 
     <meta name="keywords" content="Samadhi Nilakshana">
-    <meta name="description" content="This is my website">
+    <meta name="description" content="This is my personal website">
     <meta name="viewport" content="width=device-width initial-scale=1">
-    <meta name="theme-color" content="pink">
+    <meta name="theme-color" content="DA8877">
+
+
 
 </head>
 <body>
@@ -46,13 +48,13 @@
 
 
 
-        <img src="assets/images/Main.jpeg" alt="Main.jpeg" width="300">
+        <img src="assets/images/Main.jpeg" alt="Main Image of WebSite" width="300">
 
     </section>
 
     <section>
         <section>
-            <img src="assets/images/Photo.jpeg" alt="Myself.jpeg" width="200">
+            <img src="assets/images/MySelf.jpg" alt="Image for Profile" width="200">
         </section>
         <section>
 
@@ -69,12 +71,12 @@
             improve myself and my skills which is part of maturing and becoming better at
                                     what I do.”</pre>
 
+            <a href="assets/resource/CV%20Documantaion.pdf" download="CV%20Documantaion.pdf"><button>Download CV</button></a>
 
             <a herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
             <a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a>
-            <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png"
-                                                                                     alt="Icon of LinkedIn" width="20"></a>
-            <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub" width="20"> </a>
+            <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png" alt="Icon of LinkedIn" width="20"></a>
+            <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub"    width="20"> </a>
             <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a>
         </section>
     </section>
