Complete header and home section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="theme-color" content="DA8877">
 
+    <link rel="stylesheet" href="assets/CSS/styles.css">
+    <link rel="stylesheet" href="assets/CSS/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Tangerine:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+
+
 
 
 </head>
@@ -38,18 +49,18 @@
 <main>
 
 <section>
+
     <section>
     <div>
              <pre>
-                <dfn id="01"><h2>Hi</h2></dfn>
-                 I'm <strong>Software Developer</strong>
+                 <dfn id="01"><h1> Hi </h1></dfn>I'm Software Developer
              </pre>
     </div>
 
 
-
-        <img src="assets/images/Main.jpeg" alt="Main Image of WebSite" width="300">
-
+    <section>
+        <img src="assets/images/Main%20Image2.jpg" alt="Main Image of WebSite" width="600">
+    </section>
     </section>
 
     <section>
@@ -199,7 +210,7 @@
 
       <pre>Hey! I am looking forward to start a project with you
       Have questions about my services? Let's talk about how we can help you
-      achieve your goals and take your business to the top! </div>
+          achieve your goals and take your business to the top! </pre></div>
 
       <pre>I would be happy to answer your questions and set up a meeting with you.
           I can help set you apart from the flock!</pre>
