Added About and Service Section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Rochester&family=Shalimar&display=swap" rel="stylesheet">
 
 
 
@@ -67,20 +70,23 @@
         <section>
             <img src="assets/images/MySelf.jpg" alt="Image for Profile" width="200">
         </section>
+
         <section>
 
-            <h1> <dfn id="02">ABOUT ME</dfn></h1>
+                 <h2> <dfn id="02">ABOUT ME</dfn></h2>
            <pre>
-               I’m <b>Samadhi Nilakshana</b>
-               FRom Galle ,Srilanaka</i></pre>
+               I’m <b><i>Samadhi Nilakshana</i></b>
+               From  Galle ,Sri Lanka</pre>
 
-            <pre>
-                    <h1>I am developer and a web designer</h1></pre>
-            <pre>
-            “I am someone who is mature, candid and who has integrity.  Everyday I
-                                    work to
-            improve myself and my skills which is part of maturing and becoming better at
-                                    what I do.”</pre>
+                <pre><h1>I am developer and a web designer</h1></pre>
+
+                    <pre>
+                    “I am someone who is mature, candid and who has integrity.  Everyday I
+                                             work to
+                     improve myself and my skills which is part of maturing and becoming better at
+                                            what I do.”</pre>
+
+
 
             <a href="assets/resource/CV%20Documantaion.pdf" download="CV%20Documantaion.pdf"><button>Download CV</button></a>
 
@@ -89,24 +95,54 @@
             <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png" alt="Icon of LinkedIn" width="20"></a>
             <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub"    width="20"> </a>
             <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a>
+
         </section>
     </section>
 
     <section>
 
-        <h1><dfn id="03">Services</dfn></h1>
+        <h1><dfn id="03">----My Services----</dfn></h1>
 
-        <h3>App Development</h3>
-        <img src="assets/images/AppDevelopment.png" alt="AppDevelopment Image" width="200">
+        <div>
+            <h3>App Development</h3>
+             <img src="assets/images/AppDevelopment.png" alt="AppDevelopment Image" width="200">
 
-        <h3>Web Development</h3>
+        <pre>
+            If you are enterpreneur,you
+            know that your sucess
+            cannot depend on the o
+            pinions of others.Like the
+            wind opinions
+
+        </pre></div>
+
+        <div>
+            <h3>Web Development</h3>
         <img src="assets/images/WebDevelopment.png" alt="WebDevelopment Image" width="200">
 
-        <h3>Web Design</h3>
+            <pre>
+            If you are enterpreneur,you
+            know that your sucess
+            cannot depend on the
+            opinions of others.Like the
+            wind opinions</pre></div>
+
+        <div> <h3>Web Design</h3>
         <img src="assets/images/web-design.png" alt="Web Design Image" width="200">
 
-        <h3>Graphic Design</h3>
+        <pre>
+        It is not because things are
+        difficult that we dont dare it
+        is because we do not dare
+        that they are difficult.</pre></div>
+
+        <div><h3>Graphic Design</h3>
         <img src="assets/images/GraphicDesign.png" alt="Graphic Design Image" width="200">
+
+        <pre>
+         The art of communication,
+         stylizing and problem-solving
+         through the use of type and image</pre></div>
 
     </section>
 
