--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=News+Cycle&family=Noto+Sans+Mono:wght@100&display=swap" rel="stylesheet">
 
 
 
@@ -93,16 +96,23 @@
                                             what I do.”</pre>
 
 
-
             <a href="assets/resource/CV%20Documantaion.pdf" download="CV%20Documantaion.pdf"><button>Download CV</button></a>
 
             <a herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
+
             <a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a>
+
             <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png" alt="Icon of LinkedIn" width="20"></a>
+
             <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub"    width="20"> </a>
+
             <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a>
 
         </section>
+
+
+
+
     </section>
 
     <section>
@@ -138,8 +148,8 @@
 
         <pre>
                     It is not because things are
-                    difficult that we dont dare it
-                    is because we do not dare
+                    difficult that we dont dare
+                    it is because we do not dare
                     that they are difficult.</pre></div>
 
         <div><h3>Graphic Design</h3>
@@ -173,7 +183,7 @@
         <p><pre>
         JavaScript</pre></p></div>
 
-        <div><img src="assets/Icons/MySQL.png" alt=Icon of Mysql width="80">
+        <div><img src="assets/Icons/MySQL.png" alt=Icon of Mysql width="120">
         <p><pre>
         Mysql</pre></p></div>
 
@@ -205,7 +215,7 @@
         <p><pre>
         Ps</pre></p></div>
 
-        <div><img src="assets/Icons/postman.png" alt=Icon of Postman width="80">
+        <div><img src="assets/Icons/postman.png" alt=Icon of Postman width="120">
         <p><pre>
         Postman</pre></p></div>
         </section>
@@ -256,6 +266,8 @@
             </blockquote>
 
 
+
+
     </section>
 
     <section>
@@ -276,13 +288,12 @@
 
    <section>
 
-  <p>
       <h1><dfn id="07">Contact Me </dfn></h1>
-      <div>
+
 
       <pre>Hey! I am looking forward to start a project with you
       Have questions about my services? Let's talk about how we can help you
-          achieve your goals and take your business to the top! </pre></div>
+          achieve your goals and take your business to the top! </pre>
 
       <pre>I would be happy to answer your questions and set up a meeting with you.
           I can help set you apart from the flock!</pre>
