Added Contact section & update content

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <a href="assets/resource/CV%20Documantaion.pdf" download="CV%20Documantaion.pdf"><button>Download CV</button></a>
 
-            <a herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
+            <div> <a  herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
 
             <a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a>
 
@@ -106,7 +106,7 @@
 
             <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub"    width="20"> </a>
 
-            <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a>
+            <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a></div>
 
         </section>
 
@@ -291,61 +291,67 @@
       <h1><dfn id="07">Contact Me </dfn></h1>
 
 
-      <pre>Hey! I am looking forward to start a project with you
+      <pre>
+          Hey! I am looking forward to start a project with you
       Have questions about my services? Let's talk about how we can help you
           achieve your goals and take your business to the top! </pre>
 
-      <pre>I would be happy to answer your questions and set up a meeting with you.
-          I can help set you apart from the flock!</pre>
-    <hr>
-    
-    <img src="assets/Icons/smartphone.png/" alt="Icon of a SmartPhone" width="50">
-    <pre>
-            Phone
-        0705371558
-    </pre>
+      <pre>
+      I would be happy to answer your questions and set up a meeting with you.
+                I can help set you apart from the flock!</pre>
+      <hr>
 
-    <img src="assets/Icons/your-location.png" alt="Icon of a Location" width="50">
-    <pre>
+       <section>
+           <div><img src="assets/Icons/smartphone.png/" alt="Icon of a SmartPhone" width="50"></div>
+           <div><img src="assets/Icons/your-location.png" alt="Icon of a Location" width="50"></div>
+           <div><img src="assets/Icons/email.png" alt="Icon of a e-mail" width="50"></div>
+       </section>
+
+       <section>
+       <div><pre>
+        Phone
+        0705371558
+       </pre></div>
+
+       <div><pre>
         Samadhi Nilakshana
         No38,
         Housing Scheme,Wekunugoda,Galle.
-    </pre>
+        </pre></div>
 
-    <img src="assets/Icons/email.png" alt="Icon of a e-mail" width="50">
-    <pre>
+       <div><pre>
         samadhinilakshana1999@gmail.com
-    </pre>
+        </pre></div></section>
 
-    <div>I am also on Social Network</div>
+   <div>I am also on Social Network</div>
 
-    <a herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
-    <a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a>
-    <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png"
-                                                                             alt="Icon of LinkedIn" width="20"></a>
-    <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub" width="20"> </a>
-    <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a>
+    <section>
+    <div><a herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a></div>
+    <div><a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a></div>
+    <div><a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png"
+                                                                             alt="Icon of LinkedIn" width="20"></a></div>
+    <div><a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub" width="20"> </a></div>
+    <div><a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a></div></section>
 
     <hr>
 
     <p> Contact Me</p>
 
-    <form>
-        <fieldset>
-            <label for="txtName">Your Name</label>
-            <input id="txtName" type="text" placeholder="Your Name">
-            <br><br>
+       <form>
 
-            <label for="txtEmail">Your Email</label>
-            <input id="txtEmail" type="text" placeholder="Your Email">
-            <br><br>
+           <fieldset>
 
-            <label for="txtMessage">Your message</label>
-            <textArea id="txtMessage"></textArea>
-            <button>Send</button>
+               <input class="YourName" placeholder="Name"><br>
 
-        </fieldset>
-    </form>
+               <input class="YourAddress" placeholder="Email Address"><br>
+
+               <textarea class="YourMessage" placeholder="Message"></textarea><br>
+
+               <button class="Go">Send</button>
+
+           </fieldset>
+
+       </form>
    </section>
 
 </section>
@@ -355,7 +361,7 @@
 
     <div>
 
-        <p><b><small>Copyright © 2021 Samadhi Nilakshana All rights reserved.</small></b></p>
+        <p><b><small>Copyright © 2022 Samadhi Nilakshana All rights reserved.</small></b></p>
     </div>
 
 
