Added slider to project section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
@@ -271,18 +271,31 @@
     </section>
 
     <section>
-      <h1><dfn id="06">Project </dfn></h1>
-      <img src="assets/images/parking%20system.jpg" alt=Animation image of Parkig System width="400">
-      <p><pre>
-        Parking System </pre></p>
+     <h1><dfn id="06">Project </dfn></h1>
+    <section>
+     <section>
+      <div>
+<!--      <img src="assets/images/Parking%20System.png" alt=Animation image of Parkig System width="400">-->
+<!--      <p><pre>-->
+<!--          Parking System </pre></p>-->
+      </div>
 
-      <img src="assets/images/vet-clinic.jpg" alt=Animation image of Vet Clinc width="400">
-      <p><pre>
-       Vet Clinic </pre></p>
+      <div>
+<!--          <img src="assets/images/Vet%20Clinic.png" alt=Animation image of Vet Clinc width="400">-->
+<!--      <p><pre>-->
+<!--       Vet Clinic </pre></p>-->
+      </div>
 
-      <img src="assets/images/supermarket.jpg" alt=Animation image of SuperMarket width="400">
-      <p><pre>
-      SuperMarket </pre></p>
+      <div>
+<!--          <img src="assets/images/Sipsewana%20Institute.png" alt=Animation image of SuperMarket width="400">-->
+<!--      <p><pre>-->
+<!--      SuperMarket </pre></p>-->
+      </div>
+
+      <div></div>
+
+    </section>
+    </section>
 
   </section>
 
