--- a/index.html
+++ b/index.html
@@ -98,15 +98,16 @@
 
             <a href="assets/resource/CV%20Documantaion.pdf" download="CV%20Documantaion.pdf"><button>Download CV</button></a>
 
-            <div> <a  herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
+            <div>
+            <a  herf="https://wa.link/z9un3r"><img src="assets/Icons/whatsapp.png" alt="Icon of Whatsapp" width="20"></a>
 
             <a href=""><img src="assets/Icons/facebook.png" alt="Icon of FaceBook" width="20"></a>
 
             <a href="https://www.linkedin.com/in/samadhi-nilakshana-531305226/"><img src="assets/Icons/linkedin.png" alt="Icon of LinkedIn" width="20"></a>
 
-            <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub"    width="20"> </a>
+            <a herf="https://github.com/Sama-Liyanage"><img src="assets/Icons/github.png" alt="Icon of GitHub"width="20"></a>
 
-            <a herf=""><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a></div>
+            <a herf="https://pin.it/76tOqJ7"><img src="assets/Icons/pinterest.png" alt="Icon of pinterest" width="20"></a></div>
 
         </section>
 
@@ -271,7 +272,7 @@
     </section>
 
     <section>
-     <h1><dfn id="06">Project </dfn></h1>
+     <h1><dfn id="06">Projects </dfn></h1>
     <section>
      <section>
       <div>
@@ -293,6 +294,8 @@
       </div>
 
       <div></div>
+
+
 
     </section>
     </section>
