--- a/myprojects/CSS/Animation Case 2/index.html
+++ b/myprojects/CSS/Animation Case 2/index.html
@@ -2,103 +2,89 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animation Case 2</title>
+    <title>Animation case 2</title>
+
     <style>
+
         body{
-            background-color: #2e3136;
-            overflow: hidden;
+            background-color:#f3e5f5;
         }
-        main{
-            width: 700px;
-            height: 400px;
+
+        body > main > section{
+            width: 0;
+            height: 0;
+            border-radius: 100%;
+            border: 5px solid #4a148c;
             position: absolute;
+            top: 0;
+            bottom: 0;
             left: 0;
             right: 0;
-            top: 0;
-            bottom: 100px;
-            margin:auto;
-            overflow: hidden;
-            border: 5px solid #d7c6c6d6;;
-        }
-        main>section{
-            width: 400%;
-            height: 100%;
-            display: flex;
-            animation-name: slideme;
-            animation-duration: 10s;
-            animation-direction: alternate;
+            margin: auto;
+            animation-name: water;
             animation-iteration-count: infinite;
+            animation-duration: 2s;
+            animation-direction: normal;
         }
 
-        main>section>div{
-            width: 100%;
-        }
-        section>div:nth-child(1){
-            background: url("assets/images/Transition.png");
-            background-size: cover;
-            background-position: center;
-        }
-
-        section>div:nth-child(2){
-            background: url("assets/images/Transition1.jpg");
-            background-size: cover;
-            background-position: center;
-        }
-
-        section>div:nth-child(3){
-            background: url("assets/images/Transition2.jpg");
-            background-size: cover;
-            background-position: center;
-        }
-
-        section>div:nth-child(4){
-            background: url("assets/images/Transition3.jpg");
-            background-size: cover;
-            background-position: center;
-        }
-
-        body>section{
-            position: absolute;
-            width: 100%;
-            height: max-content;
-            text-align: center;
-            color: #e7e1e1;
-            font-family: Ubuntu;
-            font-weight: bold;
-
-            font-size: 30px;
-        }
-        @keyframes slideme {
-            0%,15%{
-                transform: translateX(0);
+        @keyframes water {
+            0%{
+                width: 5px;
+                height: 5px;
             }
-            25%,40%{
-                transform: translateX(-25%);
+            10%{
+                width: 10px;
+                height: 10px;
             }
-            50%,70%{
-                transform: translateX(-50%);
+            20%{
+                width: 25px;
+                height: 25px;
             }
-
-            80%,100%{
-                transform: translateX(-75%);
+            30%{
+                width: 50px;
+                height: 50px;
+            }
+            40%{
+                width: 75px;
+                height: 75px;
+            }
+            50%{
+                width: 100px;
+                height: 100px;
+            }
+            60%{
+                width: 125px;
+                height: 125px;
+            }
+            70%{
+                width: 150px;
+                height: 150px;
+            }
+            80%{
+                width: 175px;
+                height: 175px;
+            }
+            90%{
+                width: 200px;
+                height: 200px;
+            }
+            100%{
+                width: 225px;
+                height: 225px;
+                border-color: transparent;
             }
         }
+
     </style>
+
 </head>
 <body>
 
 <main>
     <section>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+
     </section>
 </main>
-<section>
-    <h1>CSS SLIDER</h1>
-</section>
-
 
 </body>
 </html>
