--- a/myprojects/CSS/Animation Case 3/index.html
+++ b/myprojects/CSS/Animation Case 3/index.html
@@ -2,122 +2,103 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animation Case 03</title>
-    <link href="assets/css/normalize.css" rel="stylesheet">
-    <meta content="width=device-width initial-scale=1" name="viewport">
+    <title>Animation Case 3</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        .hero{
-            height: 100vh;
-            width: 100%;
-            background-image: url("assets/sky.jpg");
-            background-size: cover;
-            background-position: center;
-            position: relative;
+        body{
+            background-color: #2e3136;
             overflow: hidden;
         }
-        .road{
-            height: 200px;
-            width: 500%;
-            display: block;
-            background-image: url("assets/road.jpg");
+        main{
+            width: 700px;
+            height: 400px;
             position: absolute;
-            bottom: 0;
             left: 0;
             right: 0;
-            z-index: 1;
-            background-repeat:repeat-x ;
-            animation: road 5s linear infinite;
-        }
-        @keyframes road {
-            100%{
-                transform: translateX(-3400px);
-            }
-        }
-        .city{
-            height: 250px;
-            width: 500%;
-            display: block;
-            background-image: url("assets/city.png");
-            position: absolute;
-            bottom: 200px;
-            left: 0;
-            right: 0;
-            z-index: 1;
-            background-repeat:repeat-x ;
-            animation: city 20s linear infinite;
-        }
-        @keyframes city {
-            100%{
-                transform: translateX(-1400px);
-            }
-        }
-        .car{
-            width: 400px;
-            left: 50%;
+            top: 0;
             bottom: 100px;
-            transform: translateX(-50%);
-            position: absolute;
-            z-index: 2;
+            margin:auto;
+            overflow: hidden;
+            border: 5px solid #d7c6c6d6;;
         }
-        .car img{
-            width: 100%;
-            animation: car 1s linear infinite;
-        }
-        @keyframes car {
-            100%{
-                transform: translateY(-1px);
-            }
-            50%{
-                transform: translateY(1px);
-            }
-            0%{
-                transform: translateY(-1px);
-            }
-        }
-        .wheel{
-            left: 50%;
-            bottom: 178px;
-            transform: translateX(-50%);
-            position: absolute;
-            z-index: 2;
-        }
-        .wheel img{
-            width: 72px;
-            height: 72px;
-            animation: wheel 1s linear infinite;
-        }
-        .back_wheel{
-            left: -165px;
-            position: absolute;
-        }
-        .front_wheel{
-            left: 80px;
-            position: absolute;
-        }
-        @keyframes wheel {
-            100%{
-                transform: rotate(360deg);
-            }
+        main>section{
+            width: 400%;
+            height: 100%;
+            display: flex;
+            animation-name: slideme;
+            animation-duration: 10s;
+            animation-direction: alternate;
+            animation-iteration-count: infinite;
         }
 
+        main>section>div{
+            width: 100%;
+        }
+        section>div:nth-child(1){
+            background: url("assets/images/Transition.png");
+            background-size: cover;
+            background-position: center;
+        }
+
+        section>div:nth-child(2){
+            background: url("assets/images/Transition1.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+
+        section>div:nth-child(3){
+            background: url("assets/images/Transition2.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+
+        section>div:nth-child(4){
+            background: url("assets/images/Transition3.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+
+        body>section{
+            position: absolute;
+            width: 100%;
+            height: max-content;
+            text-align: center;
+            color: #e7e1e1;
+            font-family: Ubuntu;
+            font-weight: bold;
+
+            font-size: 30px;
+        }
+        @keyframes slideme {
+            0%,15%{
+                transform: translateX(0);
+            }
+            25%,40%{
+                transform: translateX(-25%);
+            }
+            50%,70%{
+                transform: translateX(-50%);
+            }
+
+            80%,100%{
+                transform: translateX(-75%);
+            }
+        }
     </style>
 </head>
 <body>
-<div class="hero">
-    <div class="road"> </div>
-    <div class="city"> </div>
-    <div class="car">
-        <img src="assets/car.png">
-    </div>
-    <div class="wheel">
-        <img src="assets/wheel.png" class="back_wheel">
-        <img src="assets/wheel.png" class="front_wheel">
-    </div>
 
-</div>
+<main>
+    <section>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+</main>
+<section>
+    <h1>CSS SLIDER</h1>
+</section>
+
+
 </body>
 </html>
