--- a/myprojects/CSS/Animation Case 4/index.html
+++ b/myprojects/CSS/Animation Case 4/index.html
@@ -2,89 +2,122 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animation case 4</title>
-
+    <title>Animation Case 04</title>
+    <link href="assets/css/normalize.css" rel="stylesheet">
+    <meta content="width=device-width initial-scale=1" name="viewport">
     <style>
-
-        body{
-            background-color:#f3e5f5;
+        * {
+            margin: 0;
+            padding: 0;
         }
-
-        body > main > section{
-            width: 0;
-            height: 0;
-            border-radius: 100%;
-            border: 5px solid #4a148c;
+        .hero{
+            height: 100vh;
+            width: 100%;
+            background-image: url("assets/sky.jpg");
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            overflow: hidden;
+        }
+        .road{
+            height: 200px;
+            width: 500%;
+            display: block;
+            background-image: url("assets/road.jpg");
             position: absolute;
-            top: 0;
             bottom: 0;
             left: 0;
             right: 0;
-            margin: auto;
-            animation-name: water;
-            animation-iteration-count: infinite;
-            animation-duration: 2s;
-            animation-direction: normal;
+            z-index: 1;
+            background-repeat:repeat-x ;
+            animation: road 5s linear infinite;
         }
-
-        @keyframes water {
-            0%{
-                width: 5px;
-                height: 5px;
+        @keyframes road {
+            100%{
+                transform: translateX(-3400px);
             }
-            10%{
-                width: 10px;
-                height: 10px;
+        }
+        .city{
+            height: 250px;
+            width: 500%;
+            display: block;
+            background-image: url("assets/city.png");
+            position: absolute;
+            bottom: 200px;
+            left: 0;
+            right: 0;
+            z-index: 1;
+            background-repeat:repeat-x ;
+            animation: city 20s linear infinite;
+        }
+        @keyframes city {
+            100%{
+                transform: translateX(-1400px);
             }
-            20%{
-                width: 25px;
-                height: 25px;
-            }
-            30%{
-                width: 50px;
-                height: 50px;
-            }
-            40%{
-                width: 75px;
-                height: 75px;
+        }
+        .car{
+            width: 400px;
+            left: 50%;
+            bottom: 100px;
+            transform: translateX(-50%);
+            position: absolute;
+            z-index: 2;
+        }
+        .car img{
+            width: 100%;
+            animation: car 1s linear infinite;
+        }
+        @keyframes car {
+            100%{
+                transform: translateY(-1px);
             }
             50%{
-                width: 100px;
-                height: 100px;
+                transform: translateY(1px);
             }
-            60%{
-                width: 125px;
-                height: 125px;
+            0%{
+                transform: translateY(-1px);
             }
-            70%{
-                width: 150px;
-                height: 150px;
-            }
-            80%{
-                width: 175px;
-                height: 175px;
-            }
-            90%{
-                width: 200px;
-                height: 200px;
-            }
+        }
+        .wheel{
+            left: 50%;
+            bottom: 178px;
+            transform: translateX(-50%);
+            position: absolute;
+            z-index: 2;
+        }
+        .wheel img{
+            width: 72px;
+            height: 72px;
+            animation: wheel 1s linear infinite;
+        }
+        .back_wheel{
+            left: -165px;
+            position: absolute;
+        }
+        .front_wheel{
+            left: 80px;
+            position: absolute;
+        }
+        @keyframes wheel {
             100%{
-                width: 225px;
-                height: 225px;
-                border-color: transparent;
+                transform: rotate(360deg);
             }
         }
 
     </style>
-
 </head>
 <body>
+<div class="hero">
+    <div class="road"> </div>
+    <div class="city"> </div>
+    <div class="car">
+        <img src="assets/car.png">
+    </div>
+    <div class="wheel">
+        <img src="assets/wheel.png" class="back_wheel">
+        <img src="assets/wheel.png" class="front_wheel">
+    </div>
 
-<main>
-    <section>
-
-    </section>
-</main>
-
+</div>
 </body>
 </html>
