Update Project Section

--- a/index.html
+++ b/index.html
@@ -273,33 +273,24 @@
     </section>
 
     <section>
-     <h1><dfn id="06">Projects </dfn></h1>
+    <h1><dfn id="06">Projects </dfn></h1>
     <section>
-     <section>
-      <div>
-<!--      <img src="assets/images/Parking%20System.png" alt=Animation image of Parkig System width="400">-->
-<!--      <p><pre>-->
-<!--          Parking System </pre></p>-->
-      </div>
+         <section>
+          <div>
+          </div>
 
-      <div>
-<!--          <img src="assets/images/Vet%20Clinic.png" alt=Animation image of Vet Clinc width="400">-->
-<!--      <p><pre>-->
-<!--       Vet Clinic </pre></p>-->
-      </div>
+          <div>
+          </div>
 
-      <div>
-<!--          <img src="assets/images/Sipsewana%20Institute.png" alt=Animation image of SuperMarket width="400">-->
-<!--      <p><pre>-->
-<!--      SuperMarket </pre></p>-->
-      </div>
+          <div>
+          </div>
 
-      <div></div>
-
-
-
+          <div>
+          </div>
+         </section>
     </section>
-    </section>
+
+    <button class="btn-More"><a href="index_1.html" target="_blank">More</a></button>
 
   </section>
 
