--- a/myprojects/CSS/Animation Case 2/index.html
+++ b/myprojects/CSS/Animation Case 2/index.html
@@ -6,9 +6,9 @@
 
     <style>
 
-        body{
-            background-color:#f3e5f5;
-        }
+        /*body{*/
+        /*    background-color:#f3e5f5;*/
+        /*}*/
 
         body > main > section{
             width: 0;
