--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
         <section>
 
-        <div><img src="assets/Icons/Java.png" alt=Icon of Java width="80">
+        <div><img src="assets/Icons/java.png" alt=Icon of Java width="80">
         <p><pre>
         Java</pre></p></div>
 
@@ -311,7 +311,7 @@
       <hr>
 
        <section>
-           <div><img src="assets/Icons/smartphone.png/" alt="Icon of a SmartPhone" width="50"></div>
+           <div><img src="assets/Icons/SmartPhone.png/" alt="Icon of a SmartPhone" width="50"></div>
            <div><img src="assets/Icons/your-location.png" alt="Icon of a Location" width="50"></div>
            <div><img src="assets/Icons/email.png" alt="Icon of a e-mail" width="50"></div>
        </section>
