--- a/myprojects/CSS Frameworks/BootstrapPOS/Home.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/Home.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Health-Aura</title>
+    <title>Capsule Medical-Store</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
 </head>
 <body>
+<!--Nav Bar-->
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand mb-0 h1" href="#">
+      <img src="assets/Images/Logo1.jpg" alt="Logo of Store" width="40" height="30" class="d-inline-block align-text-top">
+     Capsule
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Manage Customer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Manage Order</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Place Order</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 
 
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
