--- a/myprojects/CSS Frameworks/BootstrapPOS/Home.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/Home.html
@@ -34,8 +34,54 @@
         </li>
       </ul>
     </div>
+<!-- search-->
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
   </div>
 </nav>
+
+<main>
+  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="1000">
+        <img src="assets/Images/Pharamacy2.jpg" class="d-block w-100" alt="Image of pharamacy">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+<!--      <div class="carousel-item" data-bs-interval="2000">-->
+<!--        <img src="assets/Images/Pharamacy1.jpg" class="d-block w-100" alt="Image of pharamcy">-->
+<!--        <div class="carousel-caption d-none d-md-block">-->
+<!--          <h5>Second slide label</h5>-->
+<!--          <p>Some representative placeholder content for the second slide.</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="carousel-item">-->
+<!--        <img src="assets/Images/Pharamacy.jpg" class="d-block w-100" alt="Image of pharamacy">-->
+<!--        <div class="carousel-caption d-none d-md-block">-->
+<!--          <h5>Third slide label</h5>-->
+<!--          <p>Some representative placeholder content for the third slide.</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</main>
 
 
 
