--- a/myprojects/CSS Frameworks/BootstrapPOS/Home.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/Home.html
@@ -51,27 +51,27 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="1000">
-        <img src="assets/Images/Pharamacy2.jpg" class="d-block w-100" alt="Image of pharamacy">
+        <img src="assets/Images/Pharmacy2.jpg" class="d-block w-100" alt="Image of pharamacy">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>The best way to get your prescription</h5>
+          <p>A pharmacy for all your needs</p>
         </div>
       </div>
-<!--      <div class="carousel-item" data-bs-interval="2000">-->
-<!--        <img src="assets/Images/Pharamacy1.jpg" class="d-block w-100" alt="Image of pharamcy">-->
-<!--        <div class="carousel-caption d-none d-md-block">-->
-<!--          <h5>Second slide label</h5>-->
-<!--          <p>Some representative placeholder content for the second slide.</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="carousel-item">-->
-<!--        <img src="assets/Images/Pharamacy.jpg" class="d-block w-100" alt="Image of pharamacy">-->
-<!--        <div class="carousel-caption d-none d-md-block">-->
-<!--          <h5>Third slide label</h5>-->
-<!--          <p>Some representative placeholder content for the third slide.</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="assets/Images/Pharmacy1.jpg" class="d-block w-100" alt="Image of pharamcy">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Dedicate to health and wellness</h5>
+          <p>The pharmacy that cares for the wellbeing of you and your family.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/Images/Pharmacy.jpg" class="d-block w-100" alt="Image of pharamacy">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>More than just a shop</h5>
+          <p>Your health.Our expertise.</p>
+        </div>
+      </div>
+    </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
