--- a/myprojects/CSS Frameworks/BootstrapPOS/Home.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/Home.html
@@ -5,6 +5,7 @@
     <title>Capsule Medical-Store</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 <body>
@@ -49,9 +50,9 @@
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+    <div class= "carousel-inner">
       <div class="carousel-item active" data-bs-interval="1000">
-        <img src="assets/Images/Pharmacy2.jpg" class="d-block w-100" alt="Image of pharamacy">
+        <img src="assets/Images/Pharmacy2.jpg" class="d-block w-100" alt="Image of pharmacy">
         <div class="carousel-caption d-none d-md-block">
           <h5>The best way to get your prescription</h5>
           <p>A pharmacy for all your needs</p>
@@ -65,7 +66,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/Images/Pharmacy.jpg" class="d-block w-100" alt="Image of pharamacy">
+        <img src="assets/Images/Pharmacy.jpg" class="d-block w-100" alt="Image of pharmacy">
         <div class="carousel-caption d-none d-md-block">
           <h5>More than just a shop</h5>
           <p>Your health.Our expertise.</p>
@@ -81,8 +82,14 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
 </main>
 
+  <footer class="container-fluid">
+    <div>
+      <p><b><small>Copyright © 2022 Samadhi Nilakshana All rights reserved.</small></b></p>
+    </div>
+  </footer>
 
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
