--- a/myprojects/CSS Frameworks/BootstrapPOS/home.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Capsule Medical-Store</title>
@@ -12,7 +12,7 @@
 <!--Nav Bar-->
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand mb-0 h1" href="#">
+    <a class="navbar-brand mb-0 h1" href="home.html">
       <img src="assets/Images/Logo1.jpg" alt="Logo of Store" width="40" height="30" class="d-inline-block align-text-top">
      Capsule
     </a>
@@ -22,23 +22,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Manage Customer</a>
+          <a class="nav-link" href="customerManage.html">Manage Customer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Manage Order</a>
+          <a class="nav-link" href="itemManage.html">Manage Items</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Place Order</a>
+          <a class="nav-link" href="orderDetails.html">Order Details</a>
         </li>
       </ul>
     </div>
 <!-- search-->
-    <form class="d-flex">
+    <form  class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
+      <button id="search-color" class="btn btn-outline-success" type="submit">Search</button>
     </form>
   </div>
 </nav>
