--- a/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                    <a class="nav-link "  href="home.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="customerManage.html">Manage Customer</a>
@@ -78,10 +78,10 @@
             </div>
 
             <div class=" col-5">
-                <div class="card ">
-                    <form class="mt-5">
+                <div class="card mt-5">
+                    <form class>
                         <div class="mb-1">
-                            <div class="card-header align-content-center">
+                            <div class="card-header align-content-center mt-0">
                                 <label class="form-label w-50">Item Search</label></div>
                                     <div class="card-body">
                                 <input type="text" class="form-control w-50" id="Item-Search" placeholder="Item Code/Name">
@@ -110,32 +110,32 @@
                 <tr>
                     <th scope="row">#01</th>
                     <td>Insuline Syringes</td>
-                    <td></td>
-                    <td></td>
+                    <td>2000</td>
+                    <td>500 Syringes</td>
                 </tr>
                 <tr>
                     <th scope="row">#02</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Bon Appetite</td>
+                    <td>1100</td>
+                    <td>100 Bottles</td>
                 </tr>
                 <tr>
                     <th scope="row">#03</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Lexotrim Oralususp</td>
+                    <td>870</td>
+                    <td>30 Bottles</td>
                 </tr>
                 <tr>
                     <th scope="row">#04</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Baby Care Gripe Water</td>
+                    <td>1220</td>
+                    <td>100 Bottles</td>
                 </tr>
                 <tr>
                     <th scope="row">#05</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Leximoxoral Susp</td>
+                    <td>620</td>
+                    <td>20 Bottles</td>
                 </tr>
 
                 </tbody>
