--- a/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                    <a class="nav-link"  href="home.html">Home</a>
 
                 </li>
                 <li class="nav-item">
@@ -79,13 +79,13 @@
     </div>
 
         <div class=" col-5">
-            <div class="card ">
-                <form class="mt-5">
+            <div class="card mt-5">
+                <form class="">
                 <div class="mb-1">
                     <div class="card-header align-content-center">
                     <label class="form-label w-50">Customer Search</label></div>
                     <div class="card-body">
-                    <input type="text" class="form-control w-25" id="Customer-Search" placeholder="Customer Id">
+                    <input type="text" class="form-control w-50" id="Customer-Search" placeholder="Customer Id">
 
                     <button type="submit" class="btn btn-success mt-2">Submit</button>
                      </div>
