--- a/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
@@ -79,10 +79,10 @@
     </div>
 
         <div class=" col-5">
-            <div class="card mt-5">
+            <div class="card mt-5 ">
                 <form class="">
                 <div class="mb-1">
-                    <div class="card-header align-content-center">
+                    <div class="card-header align-content-center bg-info text-dark">
                     <label class="form-label w-50">Customer Search</label></div>
                     <div class="card-body">
                     <input type="text" class="form-control w-50" id="Customer-Search" placeholder="Customer Id">
