--- a/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
@@ -81,7 +81,7 @@
                 <div class="card mt-5">
                     <form class>
                         <div class="mb-1">
-                            <div class="card-header align-content-center mt-0">
+                            <div class="card-header align-content-center mt-0 bg-warning text-dark ">
                                 <label class="form-label w-50">Item Search</label></div>
                                     <div class="card-body">
                                 <input type="text" class="form-control w-50" id="Item-Search" placeholder="Item Code/Name">
