--- a/myprojects/CSS Frameworks/BootstrapPOS/home.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/home.html
@@ -38,7 +38,7 @@
 <!-- search-->
     <form  class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button id="search-color" class="btn btn-outline-success" type="submit">Search</button>
+      <button class="btn btn-outline-pill bg-secondary" type="submit">Search</button>
     </form>
   </div>
 </nav>
