--- a/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
@@ -38,12 +38,12 @@
         <!-- search-->
         <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-pill bg-secondary" type="submit">Search</button>
         </form>
     </div>
 </nav>
 
-<main>
+
     <main class="container-fluid">
         <!--    <div class="shadow-lg p-3 mb-5 bg-body rounded text-center w-25">Manage Customer</div>-->
         <section class="row" >
@@ -138,24 +138,28 @@
                     <td>20 Bottles</td>
                 </tr>
 
+                <tr>
+                    <th scope="row">#06</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <th scope="row">#07</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
                 </tbody>
             </table>
         </section>
-
-
-
-    </main>
-
-
-
-
 </main>
+
 <footer class="container-fluid">
     <div>
         <p><b><small>Copyright © 2022 Samadhi Nilakshana All rights reserved.</small></b></p>
     </div>
-
-
 </footer>
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
