--- a/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
@@ -35,26 +35,25 @@
                 </li>
             </ul>
         </div>
+
         <!--        search-->
         <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-pill bg-secondary" type="submit">Search</button>
         </form>
     </div>
 </nav>
 
 <main>
-    <footer class="container-fluid">
 
-        <div>
-
-            <p><b><small>Copyright © 2022 Samadhi Nilakshana All rights reserved.</small></b></p>
-        </div>
-
-
-    </footer>
 </main>
 
+<footer class="container-fluid">
+    <div>
+        <p><b><small>Copyright © 2022 Samadhi Nilakshana All rights reserved.</small></b></p>
+    </div>
+</footer>
 
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
