--- a/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
@@ -40,7 +40,7 @@
 <!--        search-->
         <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-pill bg-secondary" type="submit">Search</button>
         </form>
     </div>
 </nav>
@@ -142,11 +142,7 @@
             </tbody>
         </table>
     </section>
-
-
-
 </main>
-
 
     <footer class="container-fluid">
         <div>
